--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,5 @@ python-decouple==3.0
 Pillow==3.4.2
 Markdown==2.6.7
 bleach==1.5.0
-sendgrid-django=4.0.4
+mysqlclient==1.3.9
+sendgrid-django==4.0.4
